Fix spacing issue for nested unordered list

--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -351,6 +351,10 @@ p a {
   text-decoration: underline;
 }
 
+ul ul {
+  margin-bottom: 0px;
+}
+
 .github-icon {
   width: 60px;
   height: 60px;
